# factuality-slice

./: README.md  SFT.ipynb  build_data.py  evaluate_sft_fast_robust.py  make_prefs.py  prompt_schema.py  pyproject.toml  requirements.txt  train_rm.py  train_sft.py
configs/: rm.yaml  sft_gemma2.yaml  sft_llama3.yaml
prompts/: .gitignore  config.yaml  judge_default.txt  judge_simple.txt  sft_default.txt  sft_fewshot.txt  sft_structured.txt
src/sft/: __init__.py  build_data.py  evaluate_sft_fast_robust.py  make_prefs.py  run_ablation_suite.py  train_rm.py  train_sft.py
